fixed gap between navbar and Layout in responsiveness

--- a/components/AppLayout/Layout.module.css
+++ b/components/AppLayout/Layout.module.css
@@ -1,11 +1,11 @@
 .container {
   display: flex;
   flex-direction: row;
-  margin-left: 100px;
+  margin-left: 6vw;
 }
 
-@media (max-width: 800px) {
+/* @media (max-width: 800px) {
   .container {
     margin-left: 80px;
   }
-}
+} */
