--- a/components/AppNav/Nav.module.css
+++ b/components/AppNav/Nav.module.css
@@ -9,7 +9,7 @@
   min-height: 100%;
   position: fixed;
   font-size: 30px;
-  padding: 30px;
+  padding: 4vw 4vh;
   margin: 0;
   list-style: none;
   background-color: black;
